[gd_scene load_steps=4 format=3 uid="uid://dx71snee20fn3"]

[ext_resource type="Script" path="res://Abilities.gd" id="1_4bpwg"]
[ext_resource type="PackedScene" uid="uid://bhw6h8rpsc5e3" path="res://AbilityIcon.tscn" id="1_4lnri"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nf5j"]
size = Vector2(604, 154)

[node name="Abilities" type="Node2D"]
script = ExtResource("1_4bpwg")
metadata/_edit_vertical_guides_ = [480.0]
metadata/_edit_horizontal_guides_ = [280.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 986.0
offset_bottom = 560.0
mouse_filter = 2
color = Color(0, 0, 0, 0.454902)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_top = -20.0
offset_right = 960.0
offset_bottom = 94.0
scale = Vector2(1, 0.992481)
theme_override_font_sizes/font_size = 40
text = "Choose Your Abilities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(347, 280)
metadata/_edit_lock_ = true

[node name="AbilityIcon2" parent="Node2D" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "slam"
clickable = true

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(480, 280)
metadata/_edit_lock_ = true

[node name="AbilityIcon4" parent="Node2D2" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "lazers"
clickable = true

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(613, 280)
metadata/_edit_lock_ = true

[node name="AbilityIcon5" parent="Node2D3" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "disk"
clickable = true

[node name="Node2D4" type="Node2D" parent="."]
position = Vector2(347, 380)
metadata/_edit_lock_ = true

[node name="AbilityIcon8" parent="Node2D4" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "explosion"
clickable = true

[node name="Node2D5" type="Node2D" parent="."]
position = Vector2(480, 380)
metadata/_edit_lock_ = true

[node name="AbilityIcon3" parent="Node2D5" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "electric_field"
clickable = true

[node name="Node2D6" type="Node2D" parent="."]
position = Vector2(613, 380)
metadata/_edit_lock_ = true

[node name="AbilityIcon" parent="Node2D6" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "axes"
clickable = true

[node name="Node2D7" type="Node2D" parent="."]
position = Vector2(347, 481)
metadata/_edit_lock_ = true

[node name="AbilityIcon9" parent="Node2D7" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
clickable = true

[node name="Node2D8" type="Node2D" parent="."]
position = Vector2(480, 481)
metadata/_edit_lock_ = true

[node name="AbilityIcon7" parent="Node2D8" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "bounce"
clickable = true

[node name="Node2D9" type="Node2D" parent="."]
position = Vector2(613, 481)
metadata/_edit_lock_ = true

[node name="AbilityIcon6" parent="Node2D9" instance=ExtResource("1_4lnri")]
scale = Vector2(2, 2)
ability_name = "roll"
clickable = true

[node name="AbilityIcon2" parent="." instance=ExtResource("1_4lnri")]
position = Vector2(290, 146)
scale = Vector2(3, 3)
ability_name = "e"

[node name="AbilityIconMid" parent="." instance=ExtResource("1_4lnri")]
position = Vector2(480, 146)
scale = Vector2(3, 3)
ability_name = "e"

[node name="AbilityIcon3" parent="." instance=ExtResource("1_4lnri")]
position = Vector2(670, 146)
scale = Vector2(3, 3)
ability_name = "e"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(492, 144)
shape = SubResource("RectangleShape2D_6nf5j")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
